--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -8,23 +8,31 @@ nav{
     gap: 20px;
     padding: 16px;
     width: 100%;
+    background-color: black;
 }
 #nav-bar-links{
     display: none;
+    list-style: none;
 }
 
 #nav-bar-links.active {
     display: flex;
     position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
+    top: 70px;
+    right: 0;
     background-color: antiquewhite;
     flex-direction: column;
-  }
+}
+
+#nav-bar-links li{
+    height: 28px;
+    width: 100px;
+    padding: 10px;
+}
 
 #nav-bar-links li a{
     text-decoration: none;
+    font-size: large;
     color: black;
 
 }
@@ -33,7 +41,8 @@ nav{
     flex-direction: column;
     justify-content: space-between;
     background-color: transparent;
-    border-width: 1px;
+    border-color: white;
+    border-width: 2px;
     border-radius: 15%;
     width: 48px;
     height: 48px;
@@ -41,7 +50,7 @@ nav{
 }
 
 .bar{
-    background-color: black;
+    background-color: white;
     height: 3px;
     width: 100%;
     border-radius: 10px;
